[gd_scene load_steps=11 format=3 uid="uid://dyylngxpyk75i"]

[ext_resource type="Script" path="res://frontend/shop_scene.gd" id="1_5ahet"]
[ext_resource type="Texture2D" uid="uid://tvta1f3ilc7h" path="res://frontend/props/6a795d2f-e4a8-4025-a7c5-e3dc986e13bf.jpg" id="1_wcpw7"]
[ext_resource type="Texture2D" uid="uid://b4d3g32oopvs" path="res://frontend/props/chatbox texture.png" id="2_miwd6"]
[ext_resource type="Texture2D" uid="uid://dfvcf8oqiye8o" path="res://frontend/props/ANTHONY(gold border).png" id="2_xs77w"]
[ext_resource type="PackedScene" uid="uid://dimhqxholwl5b" path="res://frontend/item_shop_tile.tscn" id="3_bv7ic"]
[ext_resource type="FontFile" uid="uid://bu5bpxl6utbrq" path="res://frontend/props/Minecraft.ttf" id="4_06gq4"]
[ext_resource type="AudioStream" uid="uid://cek6cgnj72qq4" path="res://frontend/props/click-for-game-menu-131903.mp3" id="6_2xter"]

[sub_resource type="LabelSettings" id="LabelSettings_3xvy0"]
font = ExtResource("4_06gq4")
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_2833o"]
font = ExtResource("4_06gq4")
font_size = 24
font_color = Color(1, 1, 0, 1)

[sub_resource type="Theme" id="Theme_cavvl"]
default_font = ExtResource("4_06gq4")

[node name="Shop" type="Node2D"]
script = ExtResource("1_5ahet")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(604, 339)
texture = ExtResource("1_wcpw7")

[node name="Anthony" type="Sprite2D" parent="."]
position = Vector2(249, 312)
scale = Vector2(0.692343, 0.692343)
texture = ExtResource("2_xs77w")

[node name="TextDisplay" type="Sprite2D" parent="."]
position = Vector2(782, 494)
scale = Vector2(0.88, 0.88)
texture = ExtResource("2_miwd6")

[node name="ItemDisplays" type="Node2D" parent="."]

[node name="Item1" parent="ItemDisplays" instance=ExtResource("3_bv7ic")]
position = Vector2(0, -24)

[node name="Item2" parent="ItemDisplays" instance=ExtResource("3_bv7ic")]
position = Vector2(200, -24)

[node name="Item3" parent="ItemDisplays" instance=ExtResource("3_bv7ic")]
position = Vector2(400, -24)

[node name="Item4" parent="ItemDisplays" instance=ExtResource("3_bv7ic")]
position = Vector2(0, 184)

[node name="Item5" parent="ItemDisplays" instance=ExtResource("3_bv7ic")]
position = Vector2(200, 184)

[node name="Item6" parent="ItemDisplays" instance=ExtResource("3_bv7ic")]
position = Vector2(400, 184)

[node name="ButtonErrorStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_2xter")

[node name="Label" type="Label" parent="."]
offset_left = 495.0
offset_top = 452.0
offset_right = 535.0
offset_bottom = 475.0
text = "Bienvenido a \"Anthony's\", yo soy Anthony ¿En qué te puedo servir?"
label_settings = SubResource("LabelSettings_3xvy0")

[node name="Gold" type="Label" parent="."]
offset_left = 976.0
offset_top = 593.0
offset_right = 1116.0
offset_bottom = 620.0
text = "Tu oro:  100"
label_settings = SubResource("LabelSettings_2833o")

[node name="Button" type="Button" parent="."]
offset_left = 75.0
offset_top = 588.0
offset_right = 135.0
offset_bottom = 620.0
theme = SubResource("Theme_cavvl")
theme_override_font_sizes/font_size = 24
text = "Salir"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(600, 336)
zoom = Vector2(1.6, 1.6)

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
